src/components/App/App.css
html,
body,
#react-root {
  height: 100%;
}

body {
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  margin: 0px;
}

.good-background {
  background-image: url('../../assets/peacefulforrest.gif');
  background-size: cover;
}

.nightmare-background {
  background-image: url('../../assets/horrorhouse.gif');
  background-size: cover;
}

.default-background {
  background-image: url('../../assets/dream.gif');
  background-size: cover;
}

img {
  display: inline-block;
  max-width: 100%;
}

/* --------------------------------------------------------------------------------
Container
-------------------------------------------------------------------------------- */

.container {
  padding: 20px;
}

/* Hide the scrollbar for Webkit-based browsers (e.g., Chrome) */
.scroll-container::-webkit-scrollbar {
  width: 0.5em;
  /* Set the width of the scrollbar to zero */
}

.scroll-container::-webkit-scrollbar-thumb {
  background-color: transparent;
  /* Hide the scrollbar thumb */
}

/* Hide the scrollbar for Firefox */
.scroll-container {
  scrollbar-width: thin;
  /* Firefox supports this property */
  scrollbar-color: transparent transparent;
  /* Hide the scrollbar thumb and track */
}


/* --------------------------------------------------------------------------------
Button
-------------------------------------------------------------------------------- */

.btn {
  display: inline-block;
  padding: 10px 20px;
  border-color: #1e1e1e;
  border-width: 1px 1px 3px;
  border-radius: 4px;
  background-color: #424242;
  color: #f8f8f8;
  font-size: 1.1rem;
  outline: 0;
  cursor: pointer;
}

.btn_sizeMin {
  min-height: 50px;
  min-width: 100px;
}

.btn_sizeSm {
  padding: 10px 15px;
  font-size: 0.8rem;
}

.btn_sizeFull {
  display: block;
  width: 100%;
}

.btn:hover {
  background-color: #f4f4f4;
  text-decoration: none;
  color: #424242;
}

/* This line makes the "Register" and "Login" buttons look like links */
.btn_asLink {
  padding: 0;
  border-width: 0;
  border-bottom: 1px solid #444;
  border-radius: 0;
  background: none;
  font: inherit;
  color: #444;
}

.btn_asLink:hover {
  background-color: transparent;
  border-color: #008183;
  color: #008183;
}

/* --------------------------------------------------------------------------------
Alert
-------------------------------------------------------------------------------- */

.alert {
  box-sizing: border-box;
  padding: 15px 10px;
  margin: 15px 0;
  border: 2px solid #e01616;
  background-color: #efefef;
  border-radius: 3px;
  color: #e01616;
  font-size: 0.8rem;
}

/* --------------------------------------------------------------------------------
Form Treatment
-------------------------------------------------------------------------------- */

.formPanel {
  box-sizing: border-box;
  width: 400px;
  max-width: 100%;
  padding: 25px;
  margin: 0 auto 20px;
  background-color: #efefef;
  border-radius: 3px;
  box-shadow: 0 1px 2px rgb(0, 0, 0, 0.4);
}

input {
  margin: 5px;
  margin-bottom: 10px;
}

/* --------------------------------------------------------------------------------
Cards
-------------------------------------------------------------------------------- */
/* BEFORE CHANGES */
.dreamcard {
  height: 25rem;
  width: 512px;
  transform-style: preserve-3d;
  transition: transform 1000ms;
  /* max-height: 450px; */
  /* perspective: 1000px; */
}

.dreamcard.expanded {
  height: auto;
  /* max-height: none; */
  z-index: 1;
}

/* .flippable-card {
  height: auto;
  width: 400px;
  perspective: 1000px;
} */

.card-front,
.card-back {
  /* height: 100%; */
  width: 100%;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  position: absolute;
}

.card-front {
  /* height: 100%; */
  width: 100%;
}

.card-back {
  /* height: 100%; */
  width: 100%;
  transform: rotateY(180deg);
}

/* --------------------------------------------------------------------------------
Backgrounds
-------------------------------------------------------------------------------- */

/* .video-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
}

video {
  object-fit: cover;
  width: 100%;
  height: 100%;
} */

/* .userBackground {
  margin: 0;
  padding: 0;
  overflow: hidden;

} */

